--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -4,7 +4,7 @@
 %\documentclass[11pt,twocolumn]{article}
 \documentclass[11pt,onecolumn]{article}
 \usepackage{hyperref,color}
-\usepackage[margin=.5in]{geometry}
+\usepackage[margin=1in]{geometry}
 \usepackage{titlesec}
 \usepackage{longtable}
 \usepackage{gb4e}
@@ -27,16 +27,17 @@
 \titlespacing\section{0in}{\parskip}{\parskip}
 
 %Just fill these in to fill in the basic syllabus information.
-\newcommand{\coursename}{Applied Regression Analysis - STAT 757}
-\newcommand{\semester}{Spring 2018}
+\newcommand{\coursename}{Introduction to Applied Bayesian Analysis - STAT 446/646}
+\newcommand{\semester}{Spring 2019}
 \newcommand{\roomnumb}{DMSC 106}
-\newcommand{\classtimes}{TuTh 9:00AM - 10:15AM}
+\newcommand{\classtimes}{MWF 9:00AM - 10:0AM}
 \newcommand{\myname}{A.~Grant Schissler}
 % \newcommand{\myemail}{\href{mailto:aschissler@unr.edu}{aschissler@unr.edu}}
 \newcommand{\myemail}{aschissler@unr.edu}
 \newcommand{\office}{DMSC 224}
-\newcommand{\officehours}{TueThu 3-4pm, or by appointment}
+\newcommand{\officehours}{TBD, or by appointment}
 % \newcommand{\university}{The University of Nevada, Reno}
+\renewcommand{\familydefault}{\sfdefault}
 
 \title{\textbf{\coursename}}
 % \author{{\university}---{\semester}---{\roomnumb}---{\classtimes}}
@@ -47,51 +48,62 @@
 \begin{document}
 \maketitle
 
+\noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}}
 
-\section*{Instructor information}
+\begin{center}
 
 \begin{tabular}{llll}
-\textbf{Name}:&\myname & \textbf{Contact}:&\href{mailto:\myemail}{\myemail}, 775-784-4661 (office)\\
+\textbf{Instructor}:&\myname & \textbf{Contact}:&\href{mailto:\myemail}{\myemail}, 775-784-4661 (office)\\
 \textbf{Office}:&\office & \textbf{Hours}:&\officehours\\
 \end{tabular}
 
+\end{center}
+
+
+Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics courses. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation.
+
+The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction. Further topics include the basics of Bayesian analysis, Monte Carlo Markov Chain (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
+
+
 \section*{Required text}
-\emph{A Modern Approach to Regression with R}, by S.J.~Sheather. \\
-Textbook website:~\url{http://www.stat.tamu.edu/~sheather/book/}
+\emph{Statistical Rethinking}, by Richard McElreath. \\
+Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
 
 \section*{Online resources}
 \begin{itemize}
-\item Course website:~\url{http:www.grantschissler.com/teaching/SP18/STAT757}, includes a working course schedule and approximate due dates of assignments and exams.
-\item Course github repo:~\url{http:github.com/grizant/STAT757}
-\item Students are responsible for checking Web Campus (\url{http:wcl.unr.edu}) and their email accounts, and are assumed to be aware of all information posted to these sources prior to each meeting.
+\item Course website:~\url{http:www.grantschissler.com/teaching/SP17/STAT446-646}, includes a working course schedule and approximate due dates of assignments and exams.
+\item Course github repo:~\url{http:github.com/grizant/STAT446-646}
+\item Students are responsible for the course website, checking Web Campus (\url{http:wcl.unr.edu}), and their email accounts, and are assumed to be aware of all information posted to these sources prior to each meeting.
 \end{itemize}
 
 \section*{Course Pre-requisites}
-None. Background in probability, statistics, and computing would be beneficial.
+STAT 352 or STAT 467 or STAT 667 or with instructor approval.
 
 \section*{Course description}
-This course covers techniques and applications of regression analysis, including inference and model diagnostics. The main goal is empower learners to confidently perform and communicate a regression analysis of real data to address research questions in a reproducible analytic/computational framework. Learners will produce professional quality documents using state-of-the-art statistical computing techniques to visualize and analyze data.
 
 \section*{Student Learning Outcomes}
 \begin{enumerate}
-\item Students will be able to demonstrate understanding of the concepts that underly modern methods of linear regression, and critically assess the assumption associated with different statistical models.
-\item Students will be able to interpret and discuss the results of regression analyses in a broader scientific context and using the terminology of the applied problem.
-\item Students will be able to perform essential regression analysis using a professional statistical package, write technical report, and present the results to a professional audience.
+\item Students will be able to demonstrate understanding of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
+\item Students will be able to interpret and discuss the results of Bayesian analysis analyses.
+\item Students will be able to perform a modern Bayesian analysis using professional statistical packages.
 \end{enumerate}
 
 \section*{Course Topics}
 Below is a tentative list topics for the course, and the order they will be covered. See the course website for a more detailed list of topics, and updated schedule.
 \begin{enumerate}
-\item Introduction to R and review basic statistical concepts
-  \item Simple Linear Regression (SLR)
-  \item Diagnostics and remedial measures for SLR
-    \item Weighted least squares
-\item Multiple Linear Regression (MLR)
-\item Diagnostics and Remedial Measures for MLR
-\item Model and Variable Selection
-\item Logistic Regression
-\item Linear Models for time series analysis (Serially Correlated Errors)
-  \item Mixed Effects Models
+\item Basics of Bayesian analysis
+\item Bayesian computation, sampling the posterior
+\item Linear Models
+\item Multivariate Linear Models
+\item Overfitting and Model Comparison
+\item Interactions in models
+\item Markov chain Monte Carlo Estimation
+\item Entropy and the Generalized Linear Model
+\item Counting and Classification
+\item Mixtures distributions
+\item Generalized Multilevel Models
+\item Multivariate analysis (Covariance/Correlation)
+\item Missing Data
 \end{enumerate}
 
 \section*{Grading}
