pre-remove online resources section

--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -51,19 +51,28 @@
 \noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}}
 
 \begin{center}
-
 \begin{tabular}{llll}
 \textbf{Instructor}:&\myname & \textbf{Contact}:&\href{mailto:\myemail}{\myemail}, 775-784-4661 (office)\\
 \textbf{Office}:&\office & \textbf{Hours}:&\officehours\\
 \end{tabular}
-
 \end{center}
-
 
 Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics courses. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation.
 
-The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction. Further topics include the basics of Bayesian analysis, Monte Carlo Markov Chain (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
+The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction. Further topics include the basics of Bayesian analysis, Markov Chain Monte Carlo (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
 
+\section*{Catalog Description}
+Introduction to Bayesian data analysis; statistical computing; simulation techniques; Markov Chain Monte Carlo; information theory; advanced statistical methods; generalized multi-level models.
+
+\section*{Course Pre-requisites}
+STAT 352 or STAT 467 or STAT 667 or with instructor approval.
+
+\section*{Student Learning Outcomes}
+\begin{enumerate}
+\item Students will be able to demonstrate understanding of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
+\item Students will be able to interpret and discuss the results of Bayesian analysis analyses.
+\item Students will be able to perform a modern Bayesian analysis using professional statistical packages.
+\end{enumerate}
 
 \section*{Required text}
 \emph{Statistical Rethinking}, by Richard McElreath. \\
@@ -75,18 +84,6 @@ Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
 \item Course github repo:~\url{http:github.com/grizant/STAT446-646}
 \item Students are responsible for the course website, checking Web Campus (\url{http:wcl.unr.edu}), and their email accounts, and are assumed to be aware of all information posted to these sources prior to each meeting.
 \end{itemize}
-
-\section*{Course Pre-requisites}
-STAT 352 or STAT 467 or STAT 667 or with instructor approval.
-
-\section*{Course description}
-
-\section*{Student Learning Outcomes}
-\begin{enumerate}
-\item Students will be able to demonstrate understanding of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
-\item Students will be able to interpret and discuss the results of Bayesian analysis analyses.
-\item Students will be able to perform a modern Bayesian analysis using professional statistical packages.
-\end{enumerate}
 
 \section*{Course Topics}
 Below is a tentative list topics for the course, and the order they will be covered. See the course website for a more detailed list of topics, and updated schedule.
