after grading pre removal of computing resources

--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -78,13 +78,6 @@ STAT 352 or STAT 467 or STAT 667 or with instructor approval.
 \emph{Statistical Rethinking}, by Richard McElreath. \\
 Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
 
-\section*{Online resources}
-\begin{itemize}
-\item Course website:~\url{http:www.grantschissler.com/teaching/SP17/STAT446-646}, includes a working course schedule and approximate due dates of assignments and exams.
-\item Course github repo:~\url{http:github.com/grizant/STAT446-646}
-\item Students are responsible for the course website, checking Web Campus (\url{http:wcl.unr.edu}), and their email accounts, and are assumed to be aware of all information posted to these sources prior to each meeting.
-\end{itemize}
-
 \section*{Course Topics}
 Below is a tentative list topics for the course, and the order they will be covered. See the course website for a more detailed list of topics, and updated schedule.
 \begin{enumerate}
@@ -103,16 +96,31 @@ Below is a tentative list topics for the course, and the order they will be cove
 \item Missing Data
 \end{enumerate}
 
+\section*{Assignments}
+Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be written individually.
+
+\section*{Midterms}
+There will be two midterms covering approximately the first and second third of the semester.
+
+\section*{Final exam}
+A comprehensive final exam will be held during the time scheduled in the UNR catalog.
+
+\section*{400/600 Students}
+Assignments and exams for students enrolled at the 400 level and 600 level will differ. Additionally, students enrolled at the 600 level will be held to a higher academic standard with respect to grading.
+
+\section*{Makeup, Late Policy}
+Late assignments, exams, and projects will not be graded. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities, you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
+
 \section*{Grading}
-Approximately 10 generic assignments will be given. These assignments correspond roughly with the topics above and students will engage in the work both in and outside class. Two take-home exams will be completed individually by students. A final project will be completed and presented instead of a written final exam. The final grades will be determined using the following percentages:
+The final grades will be determined using the following percentages:
 
 \begin{center}
 \begin{tabular}{cc}
 \begin{tabular}{l|l}	%For grade items (quizzes, homework, etc.)
 Item&Percent\\\hline\hline
-  Assignments&40\%\\
-  Exams&30\%\\
-  Project&30\%\\
+  Assignments&55\%\\
+  Midterm Exams&20\%\\
+  Final Exam&25\%\\
 \end{tabular}
 &
 \begin{tabular}{ll}
@@ -127,11 +135,8 @@ F&59 or below
 
 The instructor reserves the right to deviate from the above percentages in special cases, including borderline cases (generally this could be +/- 3\% points) may be given a + or − within the above intervals or increasing the letter grade.
 
-\section*{Makeup, Late Policy}
-Late assignments, exams, and projects will not be graded. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities, you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
-
 \section*{Computing Resources}
-This course requires the use of statistical software. Students are assumed to have access to a computer with the free software R (\url{http: www.r-project.org}) installed. Students using R are strongly encouraged to use the front-end RStudio (\url{http:www.rstudio.com}).
+This course requires the use of statistical software. Students are assumed to have access to a computer with the free software R (\url{http: www.r-project.org}) installed. Students using R are encouraged to use the front-end RStudio (\url{http:www.rstudio.com}).
 
 \section*{Diversity Statement}
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
