v1 loaded onto sharepoint

--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -57,9 +57,9 @@
 \end{tabular}
 \end{center}
 
-Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics courses. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation.
+Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics classes. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation.
 
-The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction. Further topics include the basics of Bayesian analysis, Markov Chain Monte Carlo (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
+The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction and evaluation. Further topics include the basics of Bayesian analysis, Markov Chain Monte Carlo (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
 
 \section*{Catalog Description}
 Introduction to Bayesian data analysis; statistical computing; simulation techniques; Markov Chain Monte Carlo; information theory; advanced statistical methods; generalized multi-level models.
@@ -134,9 +134,6 @@ F&59 or below
 \end{center}
 
 The instructor reserves the right to deviate from the above percentages in special cases, including borderline cases (generally this could be +/- 3\% points) may be given a + or − within the above intervals or increasing the letter grade.
-
-\section*{Computing Resources}
-This course requires the use of statistical software. Students are assumed to have access to a computer with the free software R (\url{http: www.r-project.org}) installed. Students using R are encouraged to use the front-end RStudio (\url{http:www.rstudio.com}).
 
 \section*{Diversity Statement}
 The University of Nevada, Reno is committed to providing a safe learning and work environment for all. If you believe you have experienced discrimination, sexual harassment, sexual assault, domestic/dating violence, or stalking, whether on or off campus, or need information related to immigration concerns, please contact the University’s Equal Opportunity \& Title IX Office at (775) 784-1547. Resources and interim measures are available to assist you. For more information, please visit \url{http:www.unr.edu/equal-opportunity-title-ix}.
