--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -106,7 +106,7 @@ There will be two midterms covering approximately the first and second third of 
 A comprehensive final exam will be held during the time scheduled in the UNR catalog.
 
 \section*{400/600 Students}
-Assignments and exams for students enrolled at the 400 level and 600 level will differ. Additionally, students enrolled at the 600 level will be held to a higher academic standard with respect to grading.
+Assignments and exams for students enrolled at the 400 level and 600 level will differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Additionally, students enrolled at the 600 level will be held to a different academic standard with respect to grading.
 
 \section*{Makeup, Late Policy}
 Late assignments, exams, and projects will not be graded. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities, you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
