--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -48,6 +48,7 @@
 \begin{document}
 \maketitle
 
+\vspace{-0.25in}
 \noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}}
 
 \begin{center}
@@ -57,47 +58,66 @@
 \end{tabular}
 \end{center}
 
-Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics classes. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation.
+Bayesian data analysis offers a flexible and powerful approach to modeling data and scientific inquiry. The target audience has had some linear algebra, calculus, and computer programming along one or two statistics classes. This course serves as an introduction to modern Bayesian modeling and computation, with an emphasis on generative data modeling using probability distributions, Monte Carlo simulation, and model evaluation. The students will perform analyses in professional statistical packages.
 
-The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction and evaluation. Further topics include the basics of Bayesian analysis, Markov Chain Monte Carlo (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques. 
+The approach to instruction is largely computational in both the readings and assigned class activities. Further mathematical depth will be discussed but not emphasized. Information theory and entropy will be introduced as motivation for model construction and evaluation. Further topics include the basics of Bayesian analysis, Markov Chain Monte Carlo (MCMC), regression through multilevel models, measurement error, missing data, and Gaussian process models for spatial and network autocorrelation. The main goal is empower learners to confidently perform and communicate a challenging Bayesian analysis using state-of-the-art statistical computing and modeling techniques.
 
 \section*{Catalog Description}
-Introduction to Bayesian data analysis; statistical computing; simulation techniques; Markov Chain Monte Carlo; information theory; advanced statistical methods; generalized multi-level models.
+Bayesian data analysis; posterior approximation; generative data modeling; Markov Chain Monte Carlo analysis and remediation; prior specification; Hamiltonian Monte Carlo; information theory and criterion; maximum entropy; regularization; generalized multi-level (hierarchical) regression; mixture modeling.
 
 \section*{Course Pre-requisites}
-STAT 352 or STAT 467 or STAT 667 or with instructor approval.
+STAT 352 or STAT 467 or STAT 667 or with instructor approval. Concurrent enrollment in STAT 445/645 is suggested.
 
 \section*{Student Learning Outcomes}
 \begin{enumerate}
 \item Students will be able to demonstrate understanding of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
-\item Students will be able to interpret and discuss the results of Bayesian analysis analyses.
-\item Students will be able to perform a modern Bayesian analysis using professional statistical packages.
+\item Students will be able to interpret and discuss the results of Bayesian analyses.
+\item Students will be able to perform a modern Bayesian analysis using professional statistical packages (e.g., \textsf{R} and \textsf{Stan}).
 \end{enumerate}
 
 \section*{Required text}
 \emph{Statistical Rethinking}, by Richard McElreath. \\
 Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
 
-\section*{Course Topics}
-Below is a tentative list topics for the course, and the order they will be covered. See the course website for a more detailed list of topics, and updated schedule.
-\begin{enumerate}
-\item Basics of Bayesian analysis
-\item Bayesian computation, sampling the posterior
-\item Linear Models
-\item Multivariate Linear Models
-\item Overfitting and Model Comparison
-\item Interactions in models
-\item Markov chain Monte Carlo Estimation
-\item Entropy and the Generalized Linear Model
-\item Counting and Classification
-\item Mixtures distributions
-\item Generalized Multilevel Models
-\item Multivariate analysis (Covariance/Correlation)
-\item Missing Data
-\end{enumerate}
+\section*{Tentative course schedule}
+\begin{center}
+  \begin{tabular}{|c|c|c|}
+    \hline
+    Week & Topic & Notes \\
+    \hline
+    1 & Basics of Bayesian analysis & \\
+    \hline
+    2 & Bayesian computation, sampling the posterior & \\
+    \hline
+    3 & Linear Models & \\
+    \hline
+    4 & Multivariate Linear Models & \\
+    \hline
+    5 & Overfitting and Model Comparison & Midterm 1\\
+    \hline
+    6 & Interactions in models & \\
+    \hline
+    7 & Markov chain Monte Carlo Estimation & \\
+    \hline
+    8 & Hamiltonian Monte Carlo & \\
+    \hline
+    9 & Entropy and the Generalized Linear Model & \\
+    \hline
+    10 & Counting and Classification & Midterm 2 \\
+    \hline
+    11 & Mixtures distributions & \\
+    \hline
+    12 & Generalized Multilevel (Hierarchical) Models & \\
+    \hline
+    13 & Multivariate analysis (Covariance/Correlation) & \\
+    \hline
+    14 & Misc. (e.g. Missing Data and Measurement error) & \\
+    \hline
+\end{tabular}
+\end{center}
 
 \section*{Assignments}
-Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be written individually.
+Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be completed and submitted individually.
 
 \section*{Midterms}
 There will be two midterms covering approximately the first and second third of the semester.
@@ -106,7 +126,7 @@ There will be two midterms covering approximately the first and second third of 
 A comprehensive final exam will be held during the time scheduled in the UNR catalog.
 
 \section*{400/600 Students}
-Assignments and exams for students enrolled at the 400 level and 600 level will differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Additionally, students enrolled at the 600 level will be held to a different academic standard with respect to grading.
+Assignments and exams for students enrolled at the 400 level and 600 level will differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due the last day of class.
 
 \section*{Makeup, Late Policy}
 Late assignments, exams, and projects will not be graded. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities, you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
@@ -116,11 +136,12 @@ The final grades will be determined using the following percentages:
 
 \begin{center}
 \begin{tabular}{cc}
-\begin{tabular}{l|l}	%For grade items (quizzes, homework, etc.)
-Item&Percent\\\hline\hline
-  Assignments&55\%\\
-  Midterm Exams&20\%\\
-  Final Exam&25\%\\
+\begin{tabular}{l|c|r}	%For grade items (quizzes, homework, etc.)
+Item&400-level& 600-level\\\hline\hline
+  Assignments&60\% & 40\%\\
+  Midterm Exams&20\%& 20\%\\
+  Final Exam&20\%& 20\%\\
+  Term project &-- &20\%\\
 \end{tabular}
 &
 \begin{tabular}{ll}
