update questionnaire after first round of review

--- a/proposal_files/400-600-questionaire-Intro-To-Applied-Bayesian-Analysis.tex
+++ b/proposal_files/400-600-questionaire-Intro-To-Applied-Bayesian-Analysis.tex
@@ -23,6 +23,7 @@
     urlcolor=blue,
 }
 
+
 \title{Introduction to Applied Bayesian Analysis (STAT 446/646) \\ 400/600 cross-listed course questionnaire}
 \renewcommand{\familydefault}{\sfdefault}
 
@@ -30,7 +31,7 @@
 \date{}
 \maketitle
 
-\vspace{-0.5in}
+\vspace{-0.75in}
 
 \begin{enumerate}
 \item \emph{How will graduate students achieve deeper understanding of the material presented to the combined group?}
@@ -47,7 +48,7 @@
   
 \item \emph{Discuss any synthesis experiences specifically for graduates?}
 
-  None proposed.
+  A term project will be assigned to graduate students that will comprise 20\% of the course grade. This project will require students to synthesize and apply the course content to a research setting. The students will be expected to formulate a problem, collect or simulate data, model the data, quantify uncertainty, and communicate these findings to foster knowledge discovery.
 
 \item \emph{Identify on the proposed syllabus the opportunities the graduates will have for work at a higher academic level.}
 
@@ -55,11 +56,11 @@
 
 \item \emph{Discuss how the work of graduate students will be evaluated differently from that of undergraduates by describing the criteria used in grading an undergraduate assignment versus those used in grading a graduate level assignment.}
 
-  Evaluation on assignments will be largely the same (except that tasks will be more difficult as discussed above). Midterms and exams will be graded more strictly with respect to conceptual understanding, correctness, and clarity of exposition. 
+  Midterms and exams will be graded more strictly with respect to conceptual understanding, correctness, and clarity of exposition. 
 
 \item \emph{How will graduates leave the course feeling that they have obtained greater academic value?}
 
-The graduate students will feel that they obtained greater academic value as a result of the following measures: (i) Exposure to deeper level of material in homework exercises and exams, (ii) Different grading rules that emphasize the research component of the class, and (iii) Additional opportunities to interact with the instructor.
+The graduate students will feel that they obtained greater academic value as a result of the following measures: (i) Exposure to deeper level of material in homework exercises and exams, (ii) different grading criteria that emphasize the research component of the class, (iii) additional opportunities to interact with the instructor, and (iv) completion of a term project to apply and synthesize the course content.
   
 \end{enumerate}
 
