Make Ania suggestions Round 1

--- a/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Applied-Bayesian-Analysis-syllabus.tex
@@ -30,12 +30,12 @@
 \newcommand{\coursename}{Introduction to Applied Bayesian Analysis - STAT 446/646}
 \newcommand{\semester}{Spring 2019}
 \newcommand{\roomnumb}{DMSC 106}
-\newcommand{\classtimes}{MWF 9:00AM - 10:00AM}
+\newcommand{\classtimes}{Tue,Thu 9:00am - 10:00am}
 \newcommand{\myname}{A.~Grant Schissler}
 % \newcommand{\myemail}{\href{mailto:aschissler@unr.edu}{aschissler@unr.edu}}
 \newcommand{\myemail}{aschissler@unr.edu}
 \newcommand{\office}{DMSC 224}
-\newcommand{\officehours}{TBD, or by appointment}
+\newcommand{\officehours}{Tuesdays, Wednesdays 1pm-3pm, or by appointment}
 % \newcommand{\university}{The University of Nevada, Reno}
 \renewcommand{\familydefault}{\sfdefault}
 
@@ -68,68 +68,40 @@ Bayesian data analysis; posterior approximation; generative data modeling; Marko
 \section*{Course Pre-requisites}
 STAT 352 or STAT 467 or STAT 667 or with instructor approval. Concurrent enrollment in STAT 445/645 is suggested.
 
-\section*{Student Learning Outcomes}
+\section*{400-level Student Learning Outcomes}
 \begin{enumerate}
 \item Students will be able to demonstrate understanding of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
 \item Students will be able to interpret and discuss the results of Bayesian analyses.
 \item Students will be able to perform a modern Bayesian analysis using professional statistical packages (e.g., \textsf{R} and \textsf{Stan}).
 \end{enumerate}
 
+\section*{600-level Student Learning Outcomes}
+\begin{enumerate}
+\item Students will demonstrate mastery of the concepts that underly modern methods of Bayesian analysis, and critically assess the assumptions associated with different statistical models.
+\item Students will be able to perform a modern Bayesian analysis using professional statistical packages (e.g., \textsf{R} and \textsf{Stan}) and interpret the results.
+\item Students will be able to synthesize course concepts to apply Bayesian modeling techniques to real-world data to facilitate aid scientific inquiry.
+\end{enumerate}
+
 \section*{Required text}
 \emph{Statistical Rethinking}, by Richard McElreath. \\
 Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
 
-\section*{Tentative course schedule}
-\begin{center}
-  \begin{tabular}{|c|c|c|}
-    \hline
-    Week & Topic & Notes \\
-    \hline
-    1 & Basics of Bayesian analysis & \\
-    \hline
-    2 & Bayesian computation, sampling the posterior & \\
-    \hline
-    3 & Linear Models & \\
-    \hline
-    4 & Multivariate Linear Models & \\
-    \hline
-    5 & Overfitting and Model Comparison & Midterm 1\\
-    \hline
-    6 & Interactions in models & \\
-    \hline
-    7 & Markov chain Monte Carlo Estimation & \\
-    \hline
-    8 & Hamiltonian Monte Carlo & \\
-    \hline
-    9 & Entropy and the Generalized Linear Model & \\
-    \hline
-    10 & Counting and Classification & Midterm 2 \\
-    \hline
-    11 & Mixtures distributions & \\
-    \hline
-    12 & Generalized Multilevel (Hierarchical) Models & \\
-    \hline
-    13 & Multivariate analysis (Covariance/Correlation) & \\
-    \hline
-    14 & Misc. (e.g. Missing Data and Measurement error) & \\
-    \hline
-\end{tabular}
-\end{center}
-
 \section*{Assignments}
 Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be completed and submitted individually.
 
+\section*{Exam policy} You will be allowed at one 8.5x11in page of handwritten (on both sides) notes for each midterm and three such pages for the final exam. If you believe that your grade for exam or assignment is incorrect, contact instructor at the office hours with a rational justification. All such requests must be submitted to instructor within one week after a grade is announced; late requests will not be granted. The final decision about new grade is made by the instructor. Please understand that everyone can make a mistake, and that mistakes can go both ways: higher or lower than original grade.
+
 \section*{Midterms}
-There will be two midterms covering approximately the first and second third of the semester.
+There will be two midterms, the first on Thursday, March 1, and the second on Thursday, April 12.
 
 \section*{Final exam}
-A comprehensive final exam will be held during the time scheduled in the UNR catalog.
+A comprehensive final examination will be held on May 15, 9:00am - 11:00am, DMS 106.
 
 \section*{400/600 Students}
-Assignments and exams for students enrolled at the 400 level and 600 level will differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due the last day of class.
+As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due the last day of class.
 
 \section*{Makeup, Late Policy}
-Late assignments, exams, and projects will not be graded. There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities, you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
+Late assignments, exams, and projects will not be graded (except when a student misses work due to documented illness). There will be no early or make-up exams. However, if you need to miss an exam due to participation in official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. Since the late policy is rather strict, I will drop your lowest two grades in the ``Assignments'' category as a safety factor for emergencies.
 
 \section*{Grading}
 The final grades will be determined using the following percentages:
@@ -173,5 +145,49 @@ Surreptitious or covert videotaping of class or unauthorized audio recording of 
 
 \section*{Academic Dishonesty}
 Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. For more details, see the University of Nevada, Reno general catalog.
+
+
+\section*{Tentative course schedule}
+\begin{center}
+  \begin{tabular}{|c|c|c|}
+    \hline
+    Week & Topic & Notes \\
+    \hline
+    1 & Syllabus and basics of Bayesian analysis & \\
+    \hline
+    2 & Bayesian computation, sampling the posterior & \\
+    \hline
+    3 & Linear Models & \\
+    \hline
+    4 & Multivariate Linear Models & \\
+    \hline
+    5 & Overfitting and Model Comparison & \\
+    \hline
+    6 & Review and \textbf{Midterm 1} & \\
+    \hline
+    7 & Interactions in models & \\
+    \hline
+    8 & Markov chain Monte Carlo Estimation and Hamiltonian Monte Carlo & \\
+    \hline
+    9 & -- & Spring break\\
+    \hline
+    10 & Entropy and the Generalized Linear Model & \\
+    \hline
+    11 & Counting and Classification & \\
+    \hline
+    12 & Review and \textbf{Midterm 2} & \\
+    \hline
+    13 & Mixtures distributions & \\
+    \hline
+    14 & Generalized Multilevel (Hierarchical) Models & \\
+    \hline
+    15 & Multivariate analysis (Covariance/Correlation) & \\
+    \hline
+    16 & Misc. (e.g. Missing Data and Measurement error) & \\
+    \hline
+    17 & \textbf{Final exam} & \\
+    \hline
+\end{tabular}
+\end{center}
 
 \end{document}
