--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus.tex
@@ -16,6 +16,8 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{7pt}
 
+\usepackage{url}
+
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -81,8 +83,8 @@ STAT 352 or STAT 467 or STAT 667 or with instructor approval. Enrollment in STAT
 \end{description}
 
 \section*{Required text}
-\emph{Statistical Rethinking}, by Richard McElreath. \\
-Textbook website:~\url{http://xcelab.net/rm/statistical-rethinking/}
+\emph{Introduction to Bayesian Statistics, 3rd edition}, by William M. Bolstad, James M. Curran\\
+Textbook website:\\~\url{https://www.wiley.com/en-us/Introduction+to+Bayesian+Statistics%2C+3rd+Edition-p-9781118091562}
 
 \section*{Assignments}
 Exercises will be assigned approximately weekly. You are encouraged to discuss  assignments between each other and with instructor. However, the works must be completed and submitted individually.
@@ -93,7 +95,7 @@ Exercises will be assigned approximately weekly. You are encouraged to discuss  
 There will be two midterms, the first on Thursday, March 1, and the second on Thursday, April 12.
 
 \section*{Final exam}
-A comprehensive final examination will be held on May 15, 9:00am - 11:00am, DMS 106.
+A comprehensive final examination will be held on May 15, 9:00am - 11:00am, AB 206.
 
 \section*{400/600 Students}
 As indicated above, the student learning outcomes differ at the 400 and 600 levels. Assignments and exams for students enrolled at the 400 level and 600 level will also differ. Specifically, graduate students will be expected to complete more exercises and exercises of greater difficulty on assignments. Exams will be of higher difficulty. Students enrolled at the 600 level will also be required to complete a \textbf{term project} due May 14 in class.
@@ -146,45 +148,47 @@ Surreptitious or covert videotaping of class or unauthorized audio recording of 
 Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. For more details, see the University of Nevada, Reno general catalog.
 
 
+%% in my own book schedule, I'd introduce sampling posterior much earlier
+
 \section*{Tentative course schedule}
 \begin{center}
-  \begin{tabular}{|c|c|c|}
+  \begin{tabular}{|c|c|c|c|}
     \hline
-    Week & Topic & Notes \\
+    Week & Topic1 & Topic2 & Notes \\
     \hline
-    1 & Syllabus and basics of Bayesian analysis & \\
+    1 & Syllabus/expectations & Statistical science review & Ch.1,2 \\
     \hline
-    2 & Bayesian computation, sampling the posterior & \\
+    2 & Summarizing data & Logic, probability, uncertainty & Ch.3,4 \\
     \hline
-    3 & Linear Models & \\
+    3 & Discrete random variables & Inference for discrete random variables & Ch.5,6 \\
     \hline
-    4 & Multivariate Linear Models & \\
+    4 & Continuous random variables & Inference for binomial proportion & Ch.7,8 \\
     \hline
-    5 & Overfitting and Model Comparison & \\
+    5 & Frequentist/Bayes comparison for proportion & Inference for Poisson & Ch.9,10 \\
     \hline
-    6 & Review and \textbf{Midterm 1} & \\
+    6 & Review session & \textbf{Midterm 1} & \\
     \hline
-    7 & Interactions in models & \\
+    7 & Inference for Normal mean & Frequentist/Bayes comparison for mean & Ch.11,12 \\
     \hline
-    8 & Markov Chain Monte Carlo Estimation and Hamiltonian Monte Carlo & \\
+    8 & Inference for difference in means & con'd & Ch.13 \\
     \hline
-    9 & -- & Spring break\\
+    9 & -- & -- & Spring break  \\
     \hline
-    10 & Entropy and the Generalized Linear Model & \\
+    10 & Bayesian Simple Linear Regression & con'd & Ch.14 \\
     \hline
-    11 & Counting and Classification & \\
+    11 & Inference for Standard Deviation & Robust methods & Ch.15,16 \\
     \hline
-    12 & Review and \textbf{Midterm 2} & \\
+    12 & Review session & \textbf{Midterm 2} & \\
     \hline
-    13 & Mixtures distributions & \\
+    13 & Inference Normal unknown mean and variance & con'd & Ch.17 \\
     \hline
-    14 & Generalized Multilevel (Hierarchical) Models & \\
+    14 & Inference Multivariate Normal & con'd & Ch.18\\
     \hline
-    15 & Multivariate analysis (Covariance/Correlation) & \\
+    15 & Bayesian Multiple Linear Regression & con'd & Ch.19\\
     \hline
-    16 & Misc. (e.g. Missing Data and Measurement error) & \\
+    16 & Bayes Computation/MCMC & HMC/Stan & Ch.20 \\
     \hline
-    17 & \textbf{Final exam} & \\
+    17 & \textbf{Final exam} & & \\
     \hline
 \end{tabular}
 \end{center}
